# Tempera

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  compose.yaml  pom.xml  test.txt
src/main/resources/: application.properties  data.sql
src/main/webapp/WEB-INF/includes/: footer.xhtml
src/main/webapp/WEB-INF/templates/: main.xhtml
src/test/resources/: application.properties
tempera-accesspoint/: .dockerignore  .gitignore  Dockerfile  README.md  app.sh  compose.yaml  env.yaml  environment.yaml  logging_conf.json  pyproject.toml  requirements.txt  restart_on_reboot.py  restart_on_reboot.sh  schema_specification.txt  setup_crontab.py  setup_crontab.sh  setup_docker.sh
tempera-accesspoint/api/: main.py  putter.py
tempera-accesspoint/bleclient/: device_connect.py  device_notify.py
tempera-accesspoint/database/: data.sql  data.sqlite  schemata.sql
tempera-accesspoint/docs/source/: conf.py  index.rst
tempera-accesspoint/docs/source/documentation_pages/: ble_app.rst  package.rst
tempera-accesspoint/docs/source/documentation_pages/package/: api.rst  bleclient.rst  database.rst  utils.rst
tempera-accesspoint/src/: configure.py  gen_config.py  logging_conf.py  main.py
tempera-accesspoint/src/tempera/: __init__.py  exceptions.py
tempera-accesspoint/src/tempera/api/: Dockerfile  __init__.py  _test_api.py  poster.py  send.py
tempera-accesspoint/src/tempera/bleclient/: __init__.py  device_connection.py  etl.py
tempera-accesspoint/src/tempera/database/: data.sqlite  ddl.py  entities.py
tempera-accesspoint/src/tempera/utils/: __init__.py  request_utils.py  shared.py
tempera-accesspoint/tempera/: __init__.py  _test_api.py  db_utils.py  gen_config.py  logging.conf  main.py
tempera-accesspoint/tempera/api/: main.py  poster.py
tempera-accesspoint/tempera/bleclient/: device_connect_with_services.py  device_connection.py  device_discovery.py  device_notification.py  device_notify.py  etl.py
tempera-accesspoint/tempera/database/: data.sqlite  ddl.py  entities.py
tempera-accesspoint/tempera/etl_pipeline/: time_record.py
tempera-accesspoint/tempera/utils/: config_utils.py  db_utils.py  request_utils.py  shared.py
tempera-server/: .gitignore  Dockerfile  pom.xml
tempera-server/src/main/resources/: application.properties  data.sql  db_init.sh
tempera-server/src/main/webapp/secured/: welcome.xhtml
tempera-server/src/test/resources/: AccumulatedTimeMapper.sql  DashboardDataMapper.sql  DashboardDataMapperExceptions.sql  HomeDataMapperTest.sql  TimetableDataServiceTest.sql  addRecordWithOlderRecordsRealRepositoryTest.sql  application.properties  beforeMeasurementTest.sql  measurementServiceAlertTest.sql  measurementServiceExistingAlertTest.sql  measurementServiceTest.sql  post_measurement.json  post_timerecord.json  userxServiceTest.sql
tempera-server/webapp/: .prettierrc.json  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
tempera-server/webapp/src/: index.html  styles.css
tempera-server/webapp/src/api/.openapi-generator/: FILES
tempera-server/webapp/src/api/api/: accessPointController.service.ts  accumulatedTimeController.service.ts  alertController.service.ts  api.ts  auditLogController.service.ts  authController.service.ts  climateDataController.service.ts  dashboardController.service.ts  groupManagementController.service.ts  sensor.ts  (+11 more)
tempera-server/webapp/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
tempera-station/: .gitignore  platformio.ini
tempera-station/circuit-layout/: Tempera-Circuit-Layout.fzz
tempera-station/include/: classesStructs.h  functions.h  parameters.h
tempera-station/source-code/: ReadMe.md  platformio.ini
tempera-station/source-code/include/: BLEClassesStructs.h  BLEfunctions.h  classesStructs.h  functions.h  parameters.h
tempera-station/source-code/src/: BLEfunctions.cpp  functions.cpp  main.cpp
tempera-station/src/: functions.cpp  main.cpp
webapp/: package-lock.json  package.json
webapp/src/: index.html  styles.css
webapp/src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
webapp/src/app/_services/: auth.service.ts  storage.service.ts  users.service.ts
webapp/src/app/layout/: app.footer.component.html  app.menuitem.component.ts
webapp/src/app/login/: login.component.ts
webapp/src/app/profile/: profile.component.html
(+639 files in other folders)
