# adapted from https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[project]
name = "tempera"
dynamic = ["version"]
description = "Accesspoint functionality to connect sensor stations to the backend."
dependencies = [
    "bleak==0.21.1",
    "PyYAML==6.0.1",
    "requests==2.31.0",
    "tenacity==8.2.3",
    "SQLAlchemy==2.0.29"
]
requires-python = ">=3.11"
authors = [
    { name = "Leonardo Pedri", email = "Leonardo.Pedri@uibk.ac.at" },
]
maintainers = [
    { name = "Leonardo Pedri", email = "Leonardo.Pedri@uibk.ac.at" },
]
readme = "README.md"
#license = {text = "MIT License"}


[project.urls]
Repository = "https://git.uibk.ac.at/informatik/qe/swess24/group4/g4t1"
Issues = "https://git.uibk.ac.at/informatik/qe/swess24/group4/g4t1/-/issues"


[project.scripts]
configure = "gen_config:main"
tempera_run = "main:main"


[project.optional-dependencies]
format = ["black>=24.3.0"]
api_testing = ["fastapi[all]==0.110.0"]
all = [
    "black>=24.3.0", "fastapi[all]==0.110.0"
]


[tool.setuptools.dynamic]
version = { attr = "tempera.__version__" }
