# adapted from https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[project]
name = "tempera"
dynamic = ["version"]
description = "Accesspoint functionality to connect sensor stations to the backend."
dependencies = [
    "bleak==0.21.1",
    "PyYAML==6.0.1",
    "requests==2.31.0",
    "tenacity==8.2.3",
    "SQLAlchemy==2.0.29",
    "rich==13.7.1",
    "pytz==2024.1"
]
requires-python = ">=3.11"
authors = [
    { name = "Leonardo Pedri", email = "Leonardo.Pedri@uibk.ac.at" },
]
maintainers = [
    { name = "Leonardo Pedri", email = "Leonardo.Pedri@uibk.ac.at" },
]
readme = "README.md"
#license = {text = "MIT License"}


[project.urls]
Repository = "https://git.uibk.ac.at/informatik/qe/swess24/group4/g4t1"
Issues = "https://git.uibk.ac.at/informatik/qe/swess24/group4/g4t1/-/issues"


[project.optional-dependencies]
format = ["black>=24.3.0"]
api_testing = ["fastapi[all]==0.110.0"]
docs = [
    "sphinx-rtd-theme==2.0.0",
    "sphinxcontrib-applehelp==1.0.8",
    "sphinxcontrib-devhelp==1.0.6",
    "sphinxcontrib-htmlhelp==2.0.5",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.7",
    "sphinxcontrib-serializinghtml==1.1.10"
]
all = [
    "black>=24.3.0",
    "fastapi[all]==0.110.0",
    "sphinx-rtd-theme==2.0.0",
    "sphinxcontrib-applehelp==1.0.8",
    "sphinxcontrib-devhelp==1.0.6",
    "sphinxcontrib-htmlhelp==2.0.5",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.7",
    "sphinxcontrib-serializinghtml==1.1.10"
]


[tool.setuptools.dynamic]
version = { attr = "tempera.__version__" }
